--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "dev": "concurrently \"watchify ./main.js -o bundle.js\" \"python -m http.server\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll",
+    "coverage": "jest --coverage --silent"
   },
   "dependencies": {
     "jwt-decode": "^3.1.2"
@@ -15,6 +16,8 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^7.0.0",
+    "jest": "^27.5.1",
+    "jest-fetch-mock": "^3.0.3",
     "watchify": "^4.0.0"
   }
 }
